--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,8 @@ body {
     margin: 10px;
     justify-content: flex-end;
     align-items: center;
-    
+    font-family: 'Orbitron', sans-serif;
+    font-size: 3em;
 }
 
 #keypad-div {
@@ -52,3 +53,21 @@ button {
     width: 100%;
     height: 100%;
 }
+
+@keyframes rotation-0 {
+    from {
+      transform: rotate(0deg);
+    }
+    to {
+      transform: rotate(180deg);
+    }
+  }
+
+  @keyframes rotation-180 {
+    from {
+      transform: rotate(180deg);
+    }
+    to {
+      transform: rotate(0deg);
+    }
+  }
