--- a/styles.css
+++ b/styles.css
@@ -46,12 +46,13 @@ body {
 
 .button-div {
     margin: 5px;
-
 }
 
 button {
     width: 100%;
     height: 100%;
+    font-size: 1.2em;
+    font-family: 'Orbitron', sans-serif;
 }
 
 @keyframes rotation-0 {
